--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <body>
         <div class="wrapper__body">
             <header>
-                <div class="header-text">
-                    ACTIVY
+                <div class="text__header">
+                    <span>ACTIVY</span>
                 </div>
-                <hr>
             </header>
             <div class="content">
                 <div class="feeling">
