--- a/index.html
+++ b/index.html
@@ -1,61 +1,73 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <title>Activy</title>
-        <link rel="stylesheet" href="./css/styles.css">
-        <link rel="stylesheet" href="./res/fonts/SanFranciscoFont-master">
-    </head>
-    <body>
-        <div class="wrapper__body">
-            <header>
-                <div class="header-text">
-                    ACTIVY
-                </div>
-                <hr>
-            </header>
-            <div class="content">
-                <div class="feeling">
-                    <div class="question">
-                        How are you feeling today?
-                    </div>
-                    <div class="imgmood">IMG</div>
-                </div>
-                <!--Scrollbar-->
-                <div class="where">
-                    <p>Where?</p>
-                    <button>Inside</button>
-                    <button>Outside</button>
-                </div>
-                <div class="when">
-                    <button>Morning</button>
-                    <button>Afternoon</button>
-                    <button>Evening</button>
-                    <button>Night</button>
-                </div>
-                <div class="spend">
-                    <div class="lilheader">How much do you want to spend?</div>
-                    <div></div>
-                    <!--Scrollbar-->
-                </div>
-                <div class="howfar lilheader">
-                    <div>How far do you want to travel?</div>
-                    <div></div>
-                    <!--Scrollbar-->
-                </div>
-                <div class="quality">
-                    <button>★★★★★</button>
-                    <button>★★★★</button>
-                    <button>★★★</button>
-                    <button>★★</button>
-                    <button>★</button>
-                </div>
+<head>
+    <meta charset="utf-8">
+    <title>Activy</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./res/fonts/SanFranciscoFont-master">
+</head>
+<body>
+<div class="wrapper__body">
+    <header>
+        <div class="header-text">
+            ACTIVY
+        </div>
+        <hr>
+    </header>
+    <div class="content">
+        <div class="feeling">
+            <div class="question">
+                How are you feeling today?
+            </div>
+            <div class="imgmood">
+                <img src="" alt="">
             </div>
 
-            <footer>
-                <div class="okbutton">OK</div>
-                <div class="arrow"> ></div>
-            </footer>
+            <input type="range" title="rangeBar" id="range_Value" name="points" min="0" max="100"
+                   onchange="rangevalue.value=value"/>
+            <output id="rangevalue"></output>
         </div>
-    </body>
+
+        <!--Scrollbar-->
+        <div class="where">
+            <p>Where?</p>
+            <button>Inside</button>
+            <button>Outside</button>
+        </div>
+        <div class="when">
+            <p>When?</p>
+            <button>Morning</button>
+            <button>Afternoon</button>
+            <button>Evening</button>
+            <button>Night</button>
+        </div>
+        <div class="spend">
+            <div class="lilheader">How much do you want to spend?</div>
+            <input type="range" title="rangeBar"  name="points" min="0" max="100"
+                   onchange="rangevalue2.value=value"/>
+            <output id="rangevalue2"></output>
+            <!--Scrollbar-->
+        </div>
+        <div class="howfar lilheader">
+            <div>How far do you want to travel?</div>
+            <input type="range" title="rangeBar" name="points" min="0" max="100"
+                   onchange="rangevalue3.value=value"/>
+            <output id="rangevalue3"></output>
+            <!--Scrollbar-->
+        </div>
+        <div class="quality">
+            <button>★★★★★</button>
+            <button>★★★★</button>
+            <button>★★★</button>
+            <button>★★</button>
+            <button>★</button>
+        </div>
+    </div>
+
+    <footer>
+        <div class="okbutton">OK</div>
+        <div class="arrow"> ></div>
+    </footer>
+</div>
+</body>
 </html>
