--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 How are you feeling today?
             </div>
             <div class="imgmood">
-                <img src="" alt="">
+
             </div>
 
             <input type="range" title="rangeBar" id="range_Value" name="points" min="0" max="100"
@@ -38,8 +38,8 @@
             <p>When?</p>
             <button>Morning</button>
             <button>Afternoon</button>
-            <button>Evening</button>
-            <button>Night</button>
+            <button class="btnbelow">Evening</button>
+            <button class="btnbelow">Night</button>
         </div>
         <div class="spend">
             <div class="lilheader">How much do you want to spend?</div>
@@ -48,7 +48,7 @@
             <output id="rangevalue2"></output>
             <!--Scrollbar-->
         </div>
-        <div class="howfar lilheader">
+        <div class="howfar ">
             <div>How far do you want to travel?</div>
             <input type="range" title="rangeBar" name="points" min="0" max="100"
                    onchange="rangevalue3.value=value"/>
